# docGPT

./: .gitignore  Dockerfile  Dockerfile.app  Dockerfile.client  LICENSE  NOTES.md  README.md  REPORT.md  compose.yml  pyproject.toml
client/: app.py
scripts/: download_models.py
src/docgpt/: config.py  db.py  document_processor.py  main.py  qa_system.py  rag.py  utils.py
src/docgpt/api/: routes.py
src/docgpt/client/: app.py
src/docgpt/document_stores/: base.py  faiss_store.py
src/docgpt/models/: answer.py  question.py  search.py  task.py
src/docgpt/services/: document_processor.py  rag.py
