[project]
name = "docGPT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shefeek Najeeb", email = "connectshefeek@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "langchain>=0.2.6",
    "streamlit>=1.36.0",
    "langchain-community>=0.2.6",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "openai>=1.35.7",
    "pypdf>=4.2.0",
    "tiktoken>=0.7.0",
    "gpt4all>=2.7.0",
    "langchain-chroma>=0.1.2",
    "faiss-cpu>=1.8.0.post1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[tool.pdm.scripts]
start_app = "streamlit run src/docgpt/client/app.py"
server = "uvicorn docgpt.main:app --reload"