[project]
name = "docGPT"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Shefeek Najeeb", email = "connectshefeek@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "langchain>=0.2.6",
    "langchain-community>=0.2.6",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "openai>=1.35.7",
    "pypdf>=4.2.0",
    "tiktoken>=0.7.0",
    "gpt4all>=2.7.0",
    "faiss-cpu>=1.8.0.post1",
    "scikit-learn>=1.5.0",
    "nltk>=3.8.1",
    "pymupdf>=1.24.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
client = [
    "streamlit>=1.36.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true


[tool.pdm.scripts]
start_app = "streamlit run client/app.py"
server = "uvicorn docgpt.main:app --reload"
lint = "ruff format ."

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.5.0",
    "mypy>=1.10.1",
]
